Fix alignment and sizing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -309,7 +309,7 @@
     }
 
     .flex-item-card {
-      height: 125px;
+      height: 130px;
       width: 350px;
       padding: 10px;
     }
